Version 5.12.1 (XXX 2023)
 * Assorted enhancements and fixes for the AtomSpace dictionary. #1362
 * Fix missing HAVE_THREADS_H, affects Apple Homebrew. #1363
 * Fix regex thread-safety issue. #1370

Version 5.12.0 (26 Nov 2022)
 * Fix crash when using the Atomese dictionary backend.
 * Fix generation tokenization bug when dict has no unknown word token.
 * Major Atomese dictionary extensions, including generation support.
 * Minor tweaks to `any` uniform random parse tree language.
 * Include U+202F NARROW NO-BREAK SPACE as a space character.
 * Fix the various regexes so that they're thread-safe! #1354
 * Maybe(?) fix FreeBSD missing -lstdthreads #1355

Version 5.11.0 (27 Sept 2022)
 * Prototype support for dictionary in the AtomSpace.
 * English dict: assorted missing nouns, verbs. #1289
 * Performance improvements. #1309
 * Fix Windows build break in 5.10.4, 5.10.5 fixed in #1313
 * Fix "amy" language #1312
 * Fix multilib systems, e.g. elf32-i386 #1314
 * Corrected grapheme support for random morpheme sampling. #1315
 * Thai language dictionary updates #1322
 * Punctuation fixes #1331
 * Affixes can now be specified with regexes #1334
 * The regex library PCRE2 is required by default.

Version 5.10.5 (17 June 2022)
 * Updated Docker files. #1288
 * English dict: broader handling of ellipsis.
 * Updated Thai dicts: #1292, #1294
 * Fix Thai regex's to work even with basic C++ regex lib. #1297
 * Performance improvements. #1298

Version 5.10.4 (4 March 2022)
 * English dict: fix relative clause, per mailing list.
 * Remove assorted length restrictions on word-size. #1283
 * Add missing files for building link-generator on Windows. #1285
 * Strip the internally added "._I" from subscripted idioms. #1287
 * New: Provisional Thai dictionary. #1279

Version 5.10.3 (14 Feb 2022)
 * Remove `node.js/package-lock.json` from tarball distribution. #1251
 * Fix Windows MSVC build break. #1253
 * Fix memory leak in the "!" link-parser command. #1256